--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "11.14.1",
     "@mui/material": "7.3.6",
     "@reduxjs/toolkit": "2.11.1",
+    "rc-slider": "11.1.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-redux": "9.2.0",
